--- a/index.html
+++ b/index.html
@@ -318,48 +318,34 @@
         <h3 class="main_section_title">Informationen</h3>
         <div>
           <p>
-            Nachbarschaftshilfe Lindau hilft Hochwasser-Geschädigten Das
-            Hochwasser hat auch die Bodenseeregion und Lindau getroffen und
-            teilweise zu erheblichen Schäden geführt. Gott sei Dank sind es bei
-            uns nur materielle Schäden, die aber Familien in ihrer
-            wirtschaftlichen Existenz empfindlich treffen. Die
-            Nachbarschaftshilfe Lindau hilft hier unbürokratisch und direkt.
+            Die Nachbarschaftshilfe Lindau (B) e.V. zahlt bedürftigen Kindern
+            auch in diesem Jahr rechtzeitig zum Beginn des neuen Schuljahres
+            anteilig oder ganz die Rechnung für die Anschaffung von Schulbedarf
+            (kindgerechter Schulranzen, Hefte, Stifte, Bücher). Über die Höhe
+            der Beteiligung durch die Nachbarschaftshilfe Lindau wird in jedem
+            Einzelfall individuell entschieden. Voraussetzung hierfür ist die
+            Vorlage der Originalrechnung, ein Nachweis über Grundsicherung,
+            Wohngeld, Hartz IV, geringes Einkommen oder sonstige Nachweise. Die
+            Anträge können zwischen dem 01. Juli und 30. September jeweils am
+            Samstag von 10 bis 12 Uhr im Laden der Nachbarschaftshilfe,
+            Kemptener Straße 10a in Lindau, abgegeben werden. Die
+            Nachbarschaftshilfe Lindau weist darauf hin, dass Schulranzen
+            reflektierende Flächen und eine gute Polsterung haben sollten.
+            Besonders die Anpassung im Rückenbereich sei wichtig. Es werden
+            maximal 120 Euro für einen Schulranzen und 80,00 € für Schulmaterial
+            bezuschusst. Entscheidend ist immer der jeweilige Einzelfall. Es
+            besteht kein Rechtsanspruch auf eine Bezuschussung.
           </p>
           <p>
-            Sofortige Unterstützung Vordergründig steht die schnelle und
-            kurzfristige Unterstützung durch Gegenstände und Dinge des täglichen
-            Lebens. Dazu gehören: Kleidung inklusive Schuhe für Groß und Klein
-            und für alle Jahreszeiten Haushaltsartikel jeglicher Art (Geschirr,
-            Besteck, Töpfe etc.) Handtücher, Badetücher, Geschirrtücher und
-            Bettwäsche Spielzeug inklusive Kuscheltiere Elektroartikel für den
-            Haushalt sowie Unterhaltungselektronik inklusive CDs, DVDs, BluRays
-            Konkrete Hilfe Aktuell wurde eine Familie in Lindau-Zech mit 500 €
-            unterstützt, die nachweislich fast die komplette Einrichtung in der
-            Erdgeschosswohnung durch die starken Regenfälle und das Hochwasser
-            verloren hat. Gemeinsam mit Stefan Fürhaupter von der
-            Jugendsozialarbeit an der Grundschule Lindau-Reutin konnte so ein
-            finanzieller Beitrag zur spontanen Unterstützung der betroffenen
-            Familie geleistet werden. Stefan Fürhaupter hatte von diesem Fall
-            erfahren und durch sein großes Netzwerk, auch unter der
-            Elternschaft, dann gemeinsam mit der Nachbarschaftshilfe Lindau die
-            Hilfe organisiert. Sybille Mang, Vorsitzende der Nachbarschaftshilfe
-            Lindau (B) e.V., bewilligte gemeinsam mit dem Vorstand die
-            finanzielle Unterstützung. Die Ehefrau von Prof. Dr. Dr. Werner Mang
-            erinnerte daran, dass die Nachbarschaftshilfe Lindau für solche
-            Fälle ein wichtiger Ansprechpartner sei und gerade hier die sozial
-            unterstützende Stärke zeige.
-          </p>
-          <p>
-            Kontaktmöglichkeiten Betroffene können sich direkt zu den
-            Öffnungszeiten im Laden der Nachbarschaftshilfe Lindau melden:
-            Dienstag: 09:00 – 14:00 Uhr Samstag: 09:00 – 12:00 Uhr Dort stehen
-            Beate Schwammel und Jeanette Huckle für Hilfe und Unterstützung
-            gerne zur Verfügung. Ansonsten ist die Nachbarschaftshilfe Lindau zu
-            den Öffnungszeiten auch telefonisch erreichbar:
-          </p>
-          <p>
-            Mobil: +49 1525 6965039 Per E-Mail besteht die Möglichkeit, sich
-            über info@nachbarschaftshilfe-lindau.de zu melden.
+            Kontakt: <br />
+            Nachbarschaftshilfe Lindau (B) e.V.<br />
+            Kemptener Straße 10a<br />
+            88131 Lindau (B) <br />Telefon: +49 1525/6965039<br />
+            E-Mail: info@nachbarschaftshilfe-lindau.de<br />
+            Ladenöffnungszeiten: Dienstag (09 – 14 Uhr) - Samstag (09 – 12 Uhr)
+            <br />In den jeweils gültigen Ferienzeiten in Bayern ist der Laden
+            geschlossen. <br />Zu den Schulferien gehören: Faschings-, Oster-,
+            Pfingst-, Sommer-, Herbst- und Weihnachtsferien.
           </p>
         </div>
       </div>
