--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -124,9 +124,9 @@
                 <a href="./was.html" class="nav-link scrollto menu-trigger"
                   ><i class="bx bx-child"></i> <span>WAS</span></a
                 >
-                <div class="dropdown_content">
+                <!-- <div class="dropdown_content">
                   <a href="./formulare.html">Formulare</a>
-                </div>
+                </div> -->
               </div>
             </li>
             <li>
