--- a/Nachbarschaftshilfe/was.html
+++ b/Nachbarschaftshilfe/was.html
@@ -116,9 +116,9 @@
                   class="nav-link scrollto menu-trigger active"
                   ><i class="bx bx-child"></i> <span>WAS</span></a
                 >
-                <div class="dropdown_content">
+                <!-- <div class="dropdown_content">
                   <a href="./formulare.html">Formulare</a>
-                </div>
+                </div> -->
               </div>
             </li>
             <li>
