--- a/contact.html
+++ b/contact.html
@@ -117,9 +117,9 @@
                 <a href="./was.html" class="nav-link scrollto menu-trigger"
                   ><i class="bx bx-child"></i> <span>WAS</span></a
                 >
-                <div class="dropdown_content">
+                <!-- <div class="dropdown_content">
                   <a href="./formulare.html">Formulare</a>
-                </div>
+                </div> -->
               </div>
             </li>
             <li>
@@ -177,9 +177,9 @@
                 ><img
                   src="assets/img/Bodenseeklinik.svg"
                   alt="Prof. Mang's Bodenseeklinik"
-width="100%"   
+                  width="100%"
               /></a>
-        </p>
+            </p>
           </div>
 
           <div class="univrsal_container">
