--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 <a href="./was.html" class="nav-link scrollto menu-trigger"
                   ><i class="bx bx-child"></i> <span>WAS</span></a
                 >
-                <div class="dropdown_content">
+                <!-- <div class="dropdown_content">
                   <a href="./formulare.html">Formulare</a>
-                </div>
+                </div> -->
               </div>
             </li>
             <li>
@@ -318,34 +318,16 @@
         <h3 class="main_section_title">Informationen</h3>
         <div>
           <p>
-            Die Nachbarschaftshilfe Lindau (B) e.V. zahlt bedürftigen Kindern
-            auch in diesem Jahr rechtzeitig zum Beginn des neuen Schuljahres
-            anteilig oder ganz die Rechnung für die Anschaffung von Schulbedarf
-            (kindgerechter Schulranzen, Hefte, Stifte, Bücher). Über die Höhe
-            der Beteiligung durch die Nachbarschaftshilfe Lindau wird in jedem
-            Einzelfall individuell entschieden. Voraussetzung hierfür ist die
-            Vorlage der Originalrechnung, ein Nachweis über Grundsicherung,
-            Wohngeld, Hartz IV, geringes Einkommen oder sonstige Nachweise. Die
-            Anträge können zwischen dem 01. Juli und 30. September jeweils am
-            Samstag von 10 bis 12 Uhr im Laden der Nachbarschaftshilfe,
-            Kemptener Straße 10a in Lindau, abgegeben werden. Die
-            Nachbarschaftshilfe Lindau weist darauf hin, dass Schulranzen
-            reflektierende Flächen und eine gute Polsterung haben sollten.
-            Besonders die Anpassung im Rückenbereich sei wichtig. Es werden
-            maximal 120 Euro für einen Schulranzen und 80,00 € für Schulmaterial
-            bezuschusst. Entscheidend ist immer der jeweilige Einzelfall. Es
-            besteht kein Rechtsanspruch auf eine Bezuschussung.
-          </p>
-          <p>
-            Kontakt: <br />
-            Nachbarschaftshilfe Lindau (B) e.V.<br />
-            Kemptener Straße 10a<br />
-            88131 Lindau (B) <br />Telefon: +49 1525/6965039<br />
-            E-Mail: info@nachbarschaftshilfe-lindau.de<br />
-            Ladenöffnungszeiten: Dienstag (09 – 14 Uhr) - Samstag (09 – 12 Uhr)
-            <br />In den jeweils gültigen Ferienzeiten in Bayern ist der Laden
-            geschlossen. <br />Zu den Schulferien gehören: Faschings-, Oster-,
-            Pfingst-, Sommer-, Herbst- und Weihnachtsferien.
+            In den Sommerferien ist der Laden geschlossen! <br />
+            Letzter Öffnungstag vor den Sommerferien <br />
+            Samstag 03. August 2024 <br />
+            Erster Öffnungstag nach den Sommerferien <br />
+            Dienstag, 10. September 2024 <br />
+            Das Abstellen von Waren vor dem Gebäude/Laden ist verboten! <br />
+            Aktuelle Informationen auch auf unserer Homepage
+            <a href="www.nachbarschaftshilfe-lindau.de"
+              >www.nachbarschaftshilfe-lindau.de</a
+            >
           </p>
         </div>
       </div>
