--- a/Nachbarschaftshilfe/contact.html
+++ b/Nachbarschaftshilfe/contact.html
@@ -160,7 +160,7 @@
             <p>
               <a
                 class="Sponsoren_logo_link"
-                href="http://www.sw-lindau.de/"
+                href="#"
                 target="_blank"
                 title="Stadtwerke Lindau"
                 ><img
