--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -260,7 +260,7 @@
                 <h3 class="">Sponsoren</h3>
                 <p>
                   <a
-                    href="http://www.sw-lindau.de/"
+                    href="#"
                     target="_blank"
                     title="Stadtwerke Lindau"
                     ><img
