--- a/Nachbarschaftshilfe/unterst.html
+++ b/Nachbarschaftshilfe/unterst.html
@@ -168,10 +168,7 @@
               </b>
             </p>
             <p>
-              <a
-                href="http://www.sw-lindau.de/"
-                target="_blank"
-                title="Stadtwerke Lindau"
+              <a href="#" target="_blank" title="Stadtwerke Lindau"
                 ><img
                   src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
                   alt="SW Lindau Dachmarke Claim RGB"
@@ -231,10 +228,7 @@
               <div class="univrsal_container bottom_container">
                 <h3 class="">Sponsoren</h3>
                 <p>
-                  <a
-                    href="http://www.sw-lindau.de/"
-                    target="_blank"
-                    title="Stadtwerke Lindau"
+                  <a href="#" target="_blank" title="Stadtwerke Lindau"
                     ><img
                       src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
                       alt="SW Lindau Dachmarke Claim RGB"
