--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
             <p>
               <a
                 class="Sponsoren_logo_link"
-                href="http://www.sw-lindau.de/"
+                href="#"
                 target="_blank"
                 title="Stadtwerke Lindau"
                 ><img
@@ -170,10 +170,7 @@
               /></a>
             </p>
             <p>
-              <a
-                href="https://www.bodenseeklinik.de/"
-                target="_blank"
-                title="BODENSEEKLINIK"
+              <a href="#" target="_blank" title="BODENSEEKLINIK"
                 ><img
                   src="assets/img/Bodenseeklinik.svg"
                   alt="Prof. Mang's Bodenseeklinik"
