--- a/index.html
+++ b/index.html
@@ -274,10 +274,7 @@
               <div class="univrsal_container bottom_container">
                 <h3 class="">Sponsoren</h3>
                 <p>
-                  <a
-                    href="https://www.sw-lindau.de/"
-                    target="_blank"
-                    title="Stadtwerke Lindau"
+                  <a href="#" target="_blank" title="Stadtwerke Lindau"
                     ><img
                       src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
                       alt="SW Lindau Dachmarke Claim RGB"
@@ -286,10 +283,7 @@
                   /></a>
                 </p>
                 <p>
-                  <a
-                    href="https://www.bodenseeklinik.de/"
-                    target="_blank"
-                    title="BODENSEEKLINIK"
+                  <a href="#" target="_blank" title="BODENSEEKLINIK"
                     ><img
                       src="assets/img/Bodenseeklinik.svg"
                       alt="SW Lindau Dachmarke Claim RGB"
@@ -318,16 +312,9 @@
         <h3 class="main_section_title">Informationen</h3>
         <div>
           <p>
-            In den Sommerferien ist der Laden geschlossen! <br />
-            Letzter Öffnungstag vor den Sommerferien <br />
-            Samstag 03. August 2024 <br />
-            Erster Öffnungstag nach den Sommerferien <br />
-            Dienstag, 10. September 2024 <br />
-            Das Abstellen von Waren vor dem Gebäude/Laden ist verboten! <br />
-            Aktuelle Informationen auch auf unserer Homepage
-            <a href="www.nachbarschaftshilfe-lindau.de"
-              >www.nachbarschaftshilfe-lindau.de</a
-            >
+            "Erster Öffnungstag nach den Sommerferien Samstag, 21. September
+            2024. <br />Das Abstellen von Waren vor dem Laden / Gebäude ist
+            verboten!
           </p>
         </div>
       </div>
