--- a/unterst.html
+++ b/unterst.html
@@ -168,10 +168,7 @@
               </b>
             </p>
             <p>
-              <a
-                href="http://www.sw-lindau.de/"
-                target="_blank"
-                title="Stadtwerke Lindau"
+              <a href="#" target="_blank" title="Stadtwerke Lindau"
                 ><img
                   src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
                   alt="SW Lindau Dachmarke Claim RGB"
@@ -185,10 +182,7 @@
               </b>
             </p>
             <p>
-              <a
-                href="https://www.bodenseeklinik.de/"
-                target="_blank"
-                title="BODENSEEKLINIK"
+              <a href="#" target="_blank" title="BODENSEEKLINIK"
                 ><img
                   src="assets/img/Bodenseeklinik.svg"
                   alt="Prof. Mang's Bodenseeklinik"
@@ -249,10 +243,7 @@
               <div class="univrsal_container bottom_container">
                 <h3 class="">Sponsoren</h3>
                 <p>
-                  <a
-                    href="http://www.sw-lindau.de/"
-                    target="_blank"
-                    title="Stadtwerke Lindau"
+                  <a href="#" target="_blank" title="Stadtwerke Lindau"
                     ><img
                       src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
                       alt="SW Lindau Dachmarke Claim RGB"
@@ -261,10 +252,7 @@
                   /></a>
                 </p>
                 <p>
-                  <a
-                    href="https://www.bodenseeklinik.de/"
-                    target="_blank"
-                    title="BODENSEEKLINIK"
+                  <a href="#" target="_blank" title="BODENSEEKLINIK"
                     ><img
                       src="assets/img/Bodenseeklinik.svg"
                       alt="SW Lindau Dachmarke Claim RGB"
