--- a/wie.html
+++ b/wie.html
@@ -230,10 +230,7 @@
               <div class="univrsal_container bottom_container">
                 <h3 class="">Sponsoren</h3>
                 <p>
-                  <a
-                    href="http://www.sw-lindau.de/"
-                    target="_blank"
-                    title="Stadtwerke Lindau"
+                  <a href="#" target="_blank" title="Stadtwerke Lindau"
                     ><img
                       src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
                       alt="SW Lindau Dachmarke Claim RGB"
@@ -242,10 +239,7 @@
                   /></a>
                 </p>
                 <p>
-                  <a
-                    href="https://www.bodenseeklinik.de/"
-                    target="_blank"
-                    title="BODENSEEKLINIK"
+                  <a href="#" target="_blank" title="BODENSEEKLINIK"
                     ><img
                       src="assets/img/Bodenseeklinik.svg"
                       alt="SW Lindau Dachmarke Claim RGB"
