--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -168,7 +168,7 @@
             Hilfsorganisation mit Sitz in Lindau (Bodensee)
           </div>
 
-          <!-- content -->
+          <!-- content 
           <div class="univrsal_container">
             <h3 class="main_section_title">Informationen</h3>
             <p>
@@ -178,7 +178,7 @@
             <br> Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023</b
           >
         </p>
-          </div>
+          </div> -->
           <div class="univrsal_container">
             <h1 class="main_section_title">WER</h1>
             <p>
