--- a/index.html
+++ b/index.html
@@ -311,10 +311,8 @@
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
         <div>
-          <p>
-            "Erster Öffnungstag nach den Sommerferien Samstag, 21. September
-            2024. <br />Das Abstellen von Waren vor dem Laden / Gebäude ist
-            verboten!
+          <p>Die diesjährige Schulranzenaktion ist zu Ende. <br />
+            Anträge können nur noch bis Samstag,  28. September 2024 im Laden gestellt werden.  
           </p>
         </div>
       </div>
