--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -298,7 +298,8 @@
         <h3 class="main_section_title">Informationen</h3>
           <p>
           <b>
-            Neue Herbst - und Winterware (bester Zustand ) im Angebot der Nachbarschaftshilfe . Egal ob groß oder klein . Der Laden der Nachbarschaftshilfe gibt alles her , Kleidung , Haushaltswaren (Töpfe , Tassen , Teller etc . ) , Elektrogeräte und vieles mehr . Alles in einem Topzustand . Крім того , worauf warten Sie . Wir sind für Sie da : Dienstag 09 -14 Uhr und Samstag 09 -12 Uhr . Bei Fragen einfach folgende Nummer wählen : 0152 569 650 39
+           Die diesjährige Schulranzenaktion ist zu Ende. <br />
+            Anträge können nur noch bis Samstag,  28. September 2024 im Laden gestellt werden.  
         </p>
       </div>
     </div>
