--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -298,8 +298,8 @@
         <h3 class="main_section_title">Informationen</h3>
           <p>
           <b>
-           Die diesjährige Schulranzenaktion ist zu Ende. <br />
-            Anträge können nur noch bis Samstag,  28. September 2024 im Laden gestellt werden.  
+         Herbst- und Winter nicht nur in der Natur. Auch im Laden haben sich die Mitarbeiter auf die kalte Jahreszeit eingestellt. <br> 
+        Günstige Herbst- und Winterkleidung incl. Schuhe für Groß und Klein. Außerdem Haushaltsartikel, Spielzeug und vieles mehr.
         </p>
       </div>
     </div>
