--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -298,8 +298,8 @@
         <h3 class="main_section_title">Informationen</h3>
           <p>
           <b>
-         Herbst- und Winter nicht nur in der Natur. Auch im Laden haben sich die Mitarbeiter auf die kalte Jahreszeit eingestellt. <br> 
-        Günstige Herbst- und Winterkleidung incl. Schuhe für Groß und Klein. Außerdem Haushaltsartikel, Spielzeug und vieles mehr.
+         Der Laden ist in den Weihnachtsferien vom 22.12.2024 bis 06.01.2025 geschlossen<br> 
+    
         </p>
       </div>
     </div>
