--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -291,7 +291,7 @@
       class="back_to_top d-flex align-items-center justify-content-center"
       ><i class="bi bi-arrow-up-short"></i
     ></a>
-    <!-- Modal_window -->
+    <!-- Modal_window 
     <div id="modal" style="display: none" class="modal">
       <div class="modal-content">
         <span class="close-button">&times;</span>
@@ -303,7 +303,7 @@
         </p>
       </div>
     </div>
-
+-->
     <!-- End btn_up -->
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
