--- a/Nachbarschaftshilfe/spendenkonto.html
+++ b/Nachbarschaftshilfe/spendenkonto.html
@@ -163,9 +163,9 @@
             <h1 class="main_section_title">spenden will – Spendenkonto</h1>
 
             <p>
-              HypoVereinsbank Lindau (B) <br />
+              Sparkasse Schwaben-Bodensee<br />
               <br />
-              IBAN: DE84 6002 0290 0010 4862 97 <br />
+              DE02 7315 0000 1002 6792 47<br />
               <br />
               <span class="Hinweis">Hinweis:</span> <br />
               Die Nachbarschaftshilfe Lindau (B) e.V. ist zur Ausstellung von
