--- a/was.html
+++ b/was.html
@@ -174,6 +174,33 @@
                 <span class="dot" onclick="currentSlide(11)"></span>
               </div>
 
+               <div class="slide">
+          <div class="arow_container" style="width: 100%">
+            <a class="left" onclick="changeSlide(-1)">&#10094;</a>
+            <a class="right" onclick="changeSlide(1)">&#10095;</a>
+          </div>
+          <img
+            src="./assets/img/portfolio/portfolio-0.jpg"
+            alt="Image 0"
+          />
+          <div style="padding: 20px">
+            <h4>Laden der Nachbarschaftshilfe schließt Ende 2025</h4>
+            <p>
+              Die Nachbarschaftshilfe Lindau (B) e.V. besteht seit fast 60 Jahren und hat sich in dieser Zeit als private Hilfsorganisation etabliert, die Menschen in unverschuldeten Notlagen unterstützt. Ein zentraler Bestandteil des Hilfsangebots ist der Laden in der Kemptener Straße 10a in Lindau. Dort finden Familien alles, was sie im Alltag benötigen – von Kleidung für Erwachsene, Kinder und Babys über Schuhe für jede Jahreszeit bis hin zu Haushaltswaren wie Bettwäsche, Porzellangeschirr, Töpfen und Besteck. Das Angebot wird ergänzt durch Spielzeug, Bücher, CDs und Elektrogeräte – alles zu erschwinglichen Preisen.
+              <br /><br />
+              <strong>Ein Glücksfall mit begrenzter Laufzeit</strong><br />
+              Möglich wurde diese direkte Hilfe durch die kostenfreie Überlassung eines Hauses durch die Stadtwerke Lindau. Das Gebäude bot von Erdgeschoss bis Speicher ausreichend Platz, um die umfangreichen Waren aufzunehmen. Diese großzügige Unterstützung, die vor Jahren den Grundstein für den Erfolg des Ladens legte, wird jedoch Ende 2025 enden. Der Mietvertrag, der bislang jährlich verlängert wurde, läuft zum 31. Dezember 2025 aus. Bereits vor zwei Jahren hatten die Stadtwerke angekündigt, dass eine Nutzung des Gebäudes über diesen Zeitpunkt hinaus nicht möglich sein wird. Hintergrund ist eine geplante Neustrukturierung der Technikräume im Gebäude, die ab 2026 erforderlich wird.
+              <br /><br />
+              <strong>Keine Alternative gefunden</strong><br />
+              Die Nachbarschaftshilfe Lindau hat in den vergangenen Jahren intensiv nach einer neuen, bezahlbaren Bleibe gesucht – jedoch ohne Erfolg. Die hohen Miet- und Pachtpreise in Lindau lassen keine kostengünstige Alternative zu. „Das Haus der Stadtwerke war ein echter Glücksfall für unseren Verein“, so der stellvertretende Vorstandsvorsitzende Norbert Kolz. Bei einem Gespräch mit Geschäftsführer der Stadtwerke Lindau Hannes Rösch und Florian Schneider (Abteilungsleiter Finanzen & Logistik und Verantwortlicher Immobilien) im Dezember bedankte er sich nochmals für die langjährige Unterstützung der Stadtwerke, die dem Verein nicht nur den Laden ermöglichten, sondern auch durch Spenden geholfen haben. Hannes Rösch sicherte zu, dass die Stadtwerke den Verein auch in Zukunft unterstützen werden.
+              <br /><br />
+              <strong>Der Verein bleibt aktiv</strong><br />
+              Obwohl der Laden zum Jahresende 2025 schließt, wird die Nachbarschaftshilfe Lindau (B) e.V. ihre Arbeit fortsetzen. „Es ist uns wichtig zu betonen, dass wir weiterhin Menschen in sozialen Notlagen zur Seite stehen werden“, erklärt die Vorsitzende Sybille Mang. Auch künftig wird der Verein mit vielfältigen Hilfsangeboten aktiv bleiben. Um den Übergang zu erleichtern, werden ab den Pfingstferien 2025 keine Waren mehr angenommen. Nach der Sommerpause wird der Lagerbestand durch Sonderaktionen mit noch günstigeren Preisen reduziert, sodass der Laden bis Ende des Jahres weitgehend leer ist. Trotz des bevorstehenden Endes des Ladens bleibt die Nachbarschaftshilfe ein unverzichtbarer Bestandteil der sozialen Unterstützung in Lindau.
+            </p>
+          </div>
+        </div>
+      </div>
+
               <div class="slide">
                 <div class="arow_container" style="width: 100%">
                   <a class="left" onclick="changeSlide(-1)">&#10094;</a>
