--- a/index.html
+++ b/index.html
@@ -174,25 +174,21 @@
           </div>
 
           <!-- content -->
-          <!--          <div class="univrsal_container">
-            <h3 class="main_section_title">Informationen</h3>
-            <p>
+               <h1>Der Laden der Nachbarschaftshilfe schließt Ende 2025 – Unterstützung bleibt bestehen</h1>
+    <p>
+        Die Nachbarschaftshilfe Lindau (B) e.V. wird den Laden in der Kemptener Straße 10a zum Jahresende 2025 schließen, da der Mietvertrag mit den Stadtwerken Lindau ausläuft und keine alternative Bleibe gefunden werden konnte.
+    </p>
+    <p>
+        Der Laden war ein Herzstück des Vereins und bot Familien erschwingliche Alltagsgegenstände.
+    </p>
+    <p>
+        Die Arbeit des Vereins endet jedoch nicht: Die Nachbarschaftshilfe bleibt weiterhin aktiv und setzt sich auch zukünftig für Menschen in sozialen Notlagen ein.
+    </p>
+    <p>
+        Ab Pfingsten 2025 werden keine Waren mehr angenommen, und der Lagerbestand wird bis Ende des Jahres reduziert. Die Stadtwerke Lindau sichern weiterhin ihre Unterstützung zu.
+    </p>
 
-            Der Laden ist
-            <strong>2023 letztmalig am Samstag, 23.12.2023</strong> von
-            <strong>09 - 12 Uhr</strong> geöffnet. Danach geht es für das
-            Ladenteam in die wohlverdienten Weihnachtsferien.
-          </p>
-          <p>
-            <strong>2024</strong> sind wir erstmalig wieder am
-            <strong>Dienstag, 09.01.2024</strong> in der Zeit von
-            <strong>09 - 14 Uhr</strong> für Sie da. Das Team der
-            Nachbarschaftshilfe Lindau (B) e.V. wünscht Ihnen ein
-            <strong>FROHES WEIHNACHTSFEST</strong> und einen guten Rutsch in das
-            neue Jahr.
-          </p>
-
-          </div>-->
+          </div>
           <div class="univrsal_container">
             <h1 class="main_section_title">WER</h1>
             <p>
