--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -168,17 +168,22 @@
             Hilfsorganisation mit Sitz in Lindau (Bodensee)
           </div>
 
-          <!-- content 
+        content 
           <div class="univrsal_container">
-            <h3 class="main_section_title">Informationen</h3>
-            <p>
-          <b>
-            In den Sommerferien ist der Laden geschlossen.<br> Letzter Öffnungstag VOR den Ferien am Samstag, 29.07.2023
-
-            <br> Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023</b
-          >
-        </p>
-          </div> -->
+             <h1>Der Laden der Nachbarschaftshilfe schließt Ende 2025 – Unterstützung bleibt bestehen</h1>
+    <p>
+        Die Nachbarschaftshilfe Lindau (B) e.V. wird den Laden in der Kemptener Straße 10a zum Jahresende 2025 schließen, da der Mietvertrag mit den Stadtwerken Lindau ausläuft und keine alternative Bleibe gefunden werden konnte.
+    </p>
+    <p>
+        Der Laden war ein Herzstück des Vereins und bot Familien erschwingliche Alltagsgegenstände.
+    </p>
+    <p>
+        Die Arbeit des Vereins endet jedoch nicht: Die Nachbarschaftshilfe bleibt weiterhin aktiv und setzt sich auch zukünftig für Menschen in sozialen Notlagen ein.
+    </p>
+    <p>
+        Ab Pfingsten 2025 werden keine Waren mehr angenommen, und der Lagerbestand wird bis Ende des Jahres reduziert. Die Stadtwerke Lindau sichern weiterhin ihre Unterstützung zu.
+    </p>
+          </div>
           <div class="univrsal_container">
             <h1 class="main_section_title">WER</h1>
             <p>
