--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -296,19 +296,28 @@
       class="back_to_top d-flex align-items-center justify-content-center"
       ><i class="bi bi-arrow-up-short"></i
     ></a>
-    <!-- Modal_window 
+   Modal_window 
     <div id="modal" style="display: none" class="modal">
       <div class="modal-content">
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
-          <p>
-          <b>
-         Der Laden ist in den Weihnachtsferien vom 22.12.2024 bis 06.01.2025 geschlossen<br> 
-    
-        </p>
+            
+               <h1>Der Laden der Nachbarschaftshilfe schließt Ende 2025 – Unterstützung bleibt bestehen</h1>
+    <p>
+        Die Nachbarschaftshilfe Lindau (B) e.V. wird den Laden in der Kemptener Straße 10a zum Jahresende 2025 schließen, da der Mietvertrag mit den Stadtwerken Lindau ausläuft und keine alternative Bleibe gefunden werden konnte.
+    </p>
+    <p>
+        Der Laden war ein Herzstück des Vereins und bot Familien erschwingliche Alltagsgegenstände.
+    </p>
+    <p>
+        Die Arbeit des Vereins endet jedoch nicht: Die Nachbarschaftshilfe bleibt weiterhin aktiv und setzt sich auch zukünftig für Menschen in sozialen Notlagen ein.
+    </p>
+    <p>
+        Ab Pfingsten 2025 werden keine Waren mehr angenommen, und der Lagerbestand wird bis Ende des Jahres reduziert. Die Stadtwerke Lindau sichern weiterhin ihre Unterstützung zu.
+    </p>
       </div>
     </div>
--->
+
     <!-- End btn_up -->
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
