--- a/Nachbarschaftshilfe/was.html
+++ b/Nachbarschaftshilfe/was.html
@@ -170,6 +170,9 @@
                 <span class="dot" onclick="currentSlide(7)"></span>
                 <span class="dot" onclick="currentSlide(8)"></span>
                 <span class="dot" onclick="currentSlide(9)"></span>
+                          <span class="dot" onclick="currentSlide(10)"></span>
+                          <span class="dot" onclick="currentSlide(11)"></span>
+                          <span class="dot" onclick="currentSlide(12)"></span>
               </div>
   <div class="slide">
           <div class="arow_container" style="width: 100%">
