--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -300,6 +300,9 @@
     <p>
         Ab Pfingsten 2025 werden keine Waren mehr angenommen, und der Lagerbestand wird bis Ende des Jahres reduziert. Die Stadtwerke Lindau sichern weiterhin ihre Unterstützung zu.
     </p>
+           <p>
+        <a href="https://www.nachbarschaftshilfe-lindau.de/was.html" target="_blank">Hier findest du den kompletten Artikel.</a>
+    </p>
       </div>
     </div>
 
