--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
         <div>
-          <p>Die diesjährige Schulranzenaktion ist zu Ende. <br />
-            Anträge können nur noch bis Samstag,  28. September 2024 im Laden gestellt werden.  
+          <p>Der Laden ist bis auf weiteres geschlossen
           </p>
         </div>
       </div>
