--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -287,18 +287,9 @@
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
             
-               <h2>Der Laden der Nachbarschaftshilfe schließt Ende 2025 – Unterstützung bleibt bestehen</h2>
+               <h2>Der Laden ist bis auf weiteres geschlossen</h2>
     <p>
-        Die Nachbarschaftshilfe Lindau (B) e.V. wird den Laden in der Kemptener Straße 10a zum Jahresende 2025 schließen, da der Mietvertrag mit den Stadtwerken Lindau ausläuft und keine alternative Bleibe gefunden werden konnte.
-    </p>
-    <p>
-        Der Laden war ein Herzstück des Vereins und bot Familien erschwingliche Alltagsgegenstände.
-    </p>
-    <p>
-        Die Arbeit des Vereins endet jedoch nicht: Die Nachbarschaftshilfe bleibt weiterhin aktiv und setzt sich auch zukünftig für Menschen in sozialen Notlagen ein.
-    </p>
-    <p>
-        Ab Pfingsten 2025 werden keine Waren mehr angenommen, und der Lagerbestand wird bis Ende des Jahres reduziert. Die Stadtwerke Lindau sichern weiterhin ihre Unterstützung zu.
+        
     </p>
            <p>
         <a href="https://www.nachbarschaftshilfe-lindau.de/was.html" target="_blank">Hier findest du den kompletten Artikel.</a>
