--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
         <div>
-          <p>Der Laden ist bis auf weiteres geschlossen
+          <p>Der Laden der Nachbarschaftshilfe Lindau (B) e.V. ist ab dem 14. Mai 2025 bis auf Weiteres immer Mittwochs von 08:00 bis 13:00 Uhr geöffnet. 
+            Ausgenommen von dieser Regelung sind die Schulferien (Pfingst-, Sommer-, Herbst- und Weihnachtsferien). 
+            Da der Laden zum 31.12.2025 endgültig und ersatzlos geschlossen wird, können die Waren ab dem 14. Mai zu besonders günstigen Preisen erworben werden.
           </p>
         </div>
       </div>
