--- a/Nachbarschaftshilfe/index.html
+++ b/Nachbarschaftshilfe/index.html
@@ -293,7 +293,8 @@
             Ausgenommen von dieser Regelung sind die Schulferien (Pfingst-, Sommer-, Herbst- und Weihnachtsferien). 
             Da der Laden zum 31.12.2025 endgültig und ersatzlos geschlossen wird, können die Waren ab dem 14. Mai zu besonders günstigen Preisen erworben werden.
           </p>
-    </p>
+<p>WICHTIG! Es werden keine Waren mehr angenommen!</p>
+
       </div>
     </div>
 
